# ai-voice-assistant

./: .env.example  .gitignore  README.md  postman_collection.json  pyproject.toml  requirements-dev.txt  requirements.txt
data/: app.db  bookings.json  cached_trips.json  chat_history.json  trip_test_cases.csv  trip_test_cases.xlsx
data/chroma_old/c0f33fa4-1cc4-4d8b-8b1c-1998d74a935f/: index_metadata.pickle
docs/: architecture.md
scripts/: generate_excel_sheet.py  generate_structure_image.py  generate_test_cases.py  run_flight_comparison.py  run_test_cases.py
src/clean_app/: __init__.py  main.py  unified_service.py
src/clean_app/application/: __init__.py
src/clean_app/application/dto/: __init__.py  trip_dto.py  user_dto.py
src/clean_app/application/use_cases/: __init__.py  book_trip.py  chat_with_trips.py  create_user.py  get_place_details.py  index_knowledge.py  index_mongo_trips.py  index_trips.py  ingest_document.py  ingest_faq.py  list_trips.py  modify_itinerary.py  plan_itinerary.py
src/clean_app/domain/: __init__.py
src/clean_app/domain/entities/: trip.py  (+5 more)
src/clean_app/infrastructure/: __init__.py
src/clean_app/presentation/: __init__.py
tests/integration/: test_create_user.py  test_ingest.py  test_trip_chat_api.py  test_unified_train_and_chat.py
tests/unit/: test_booking.py  test_list_all_trips.py  test_optimization_features.py  test_places.py  test_platform_knowledge.py  test_recommendation.py  test_safety_limits.py  test_sarvam_voice_service.py  test_trip_entity.py  test_trvios_trip_repository.py  test_user_entity.py  test_well_being.py
(+63 files in other folders)
