[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-app"
version = "0.1.0"
description = "Python project with clean architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "chromadb>=0.5",
    "fastapi>=0.110",
    "httpx>=0.27",
    "openai>=1.30",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.27",
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
clean-app = "clean_app.main:main"
trip-api = "clean_app.presentation.api.run:run_api"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clean_app = ["presentation/web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["clean_app"]
